--- a/movies-shell/pom.xml
+++ b/movies-shell/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.2.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mycompany</groupId>
@@ -16,9 +16,9 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-shell.version>2.0.1.RELEASE</spring-shell.version>
-		<spring-web.version>5.1.8.RELEASE</spring-web.version>
-		<httpclient.version>4.5.9</httpclient.version>
-		<jackson.version>2.9.9</jackson.version>
+		<spring-web.version>5.2.1.RELEASE</spring-web.version>
+		<httpclient.version>4.5.10</httpclient.version>
+		<jackson.version>2.10.0</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -61,6 +61,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
