--- a/movies-api/src/main/resources/application.yml
+++ b/movies-api/src/main/resources/application.yml
@@ -24,10 +24,15 @@ management:
     enabled: false
   endpoints:
     web:
-      exposure.include: "*"
+      exposure.include: beans, env, health, info, metrics, mappings
   endpoint:
     health:
       show-details: always
+
+springdoc:
+  show-actuator: true
+  swagger-ui:
+    groups-order: DESC
 
 logging:
   level:
