--- a/movies-api/pom.xml
+++ b/movies-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.2.RELEASE</version>
+		<version>2.3.3.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -18,7 +18,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
-		<springdoc.openapi-ui.version>1.4.3</springdoc.openapi-ui.version>
+		<springdoc.openapi.version>1.4.4</springdoc.openapi.version>
 	</properties>
 
 	<dependencies>
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>${springdoc.openapi-ui.version}</version>
+			<version>${springdoc.openapi.version}</version>
 		</dependency>
 
 		<dependency>
