--- a/movies-shell/pom.xml
+++ b/movies-shell/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
+		<version>2.4.1</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	
@@ -18,9 +18,9 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-shell.version>2.0.1.RELEASE</spring-shell.version>
-		<spring-web.version>5.2.1.RELEASE</spring-web.version>
-		<httpclient.version>4.5.10</httpclient.version>
-		<jackson.version>2.10.0</jackson.version>
+		<spring-web.version>5.3.2</spring-web.version>
+		<httpclient.version>4.5.13</httpclient.version>
+		<jackson-databind.version>2.11.3</jackson-databind.version>
 	</properties>
 
 	<dependencies>
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+			<version>${jackson-databind.version}</version>
 		</dependency>
 
 		<dependency>
@@ -58,17 +58,10 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 	</dependencies>
 
