project update - update spring-boot to 2.4.3; - update mapstruct to 1.4.2.Final; - update springdoc openapi to 1.5.5; - update spring-web to 5.3.4; - update jackson-databind to 2.11.4; - update npm dependencies to latest ones; - set CORS AllowedOrigins as properties in application.yaml; - exclude lombok from spring-boot-maven-plugin; - update movies-shell screenshot.

--- a/movies-api/src/main/resources/application.yml
+++ b/movies-api/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
 
+app:
+  cors:
+    allowed-origins: https://localhost:3443
+
 management:
   security:
     enabled: false
