--- a/movies-api/pom.xml
+++ b/movies-api/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.1</version>
+		<version>2.4.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -17,8 +17,8 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
-		<springdoc.openapi.version>1.5.1</springdoc.openapi.version>
+		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+		<springdoc.openapi.version>1.5.5</springdoc.openapi.version>
 	</properties>
 
 	<dependencies>
@@ -80,19 +80,25 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+          <excludes>
+            <exclude>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+            </exclude>
+          </excludes>
+        </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 						<annotationProcessorPaths>
-								<!-- Lombok -->
 								<path>
 										<groupId>org.projectlombok</groupId>
 										<artifactId>lombok</artifactId>
 										<version>${lombok.version}</version>
 								</path>
-								<!-- MapStruct -->
 								<path>
 										<groupId>org.mapstruct</groupId>
 										<artifactId>mapstruct-processor</artifactId>
