--- a/movies-shell/pom.xml
+++ b/movies-shell/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.1</version>
+		<version>2.4.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	
@@ -18,9 +18,9 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-shell.version>2.0.1.RELEASE</spring-shell.version>
-		<spring-web.version>5.3.2</spring-web.version>
+		<spring-web.version>5.3.4</spring-web.version>
 		<httpclient.version>4.5.13</httpclient.version>
-		<jackson-databind.version>2.11.3</jackson-databind.version>
+		<jackson-databind.version>2.11.4</jackson-databind.version>
 	</properties>
 
 	<dependencies>
@@ -72,6 +72,12 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<executable>true</executable>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+            </exclude>
+          </excludes>
 				</configuration>
 			</plugin>
 		</plugins>
