--- a/movies-api/src/main/resources/application.yml
+++ b/movies-api/src/main/resources/application.yml
@@ -37,6 +37,7 @@ springdoc:
   show-actuator: true
   swagger-ui:
     groups-order: DESC
+    disable-swagger-default-url: true
 
 logging:
   level:
