--- a/movies-shell/src/main/resources/application.yml
+++ b/movies-shell/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: movies-shell
+  main:
+    allow-circular-references: true
 
 http.client.ssl:
   trust-store: keystore.p12
