--- a/movies-ui/package.json
+++ b/movies-ui/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.27.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "semantic-ui-react": "^2.1.2"
+    "web-vitals": "^2.1.4",
+    "axios": "^0.27.2",
+    "semantic-ui-react": "^2.1.3"
   },
   "scripts": {
     "start": "HTTPS=true PORT=3443 react-scripts start",
@@ -16,7 +20,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
