project update - rename groupId to com.ivanfranchin; - change some classes to records; - remove lombok from movies-shell; - run npm upgrade in movies-ui.

--- a/movies-api/pom.xml
+++ b/movies-api/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.mycompany</groupId>
+    <groupId>com.ivanfranchin</groupId>
     <artifactId>movies-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>movies-api</name>
