--- a/movies-shell/pom.xml
+++ b/movies-shell/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.4</version>
+        <version>3.0.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -17,10 +17,10 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-shell.version>2.1.2</spring-shell.version>
-        <spring-web.version>5.3.23</spring-web.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <jackson-databind.version>2.13.4.2</jackson-databind.version>
+        <spring-shell.version>3.0.0</spring-shell.version>
+        <spring-web.version>6.0.4</spring-web.version>
+        <httpclient5.version>5.2.1</httpclient5.version>
+        <jackson-databind.version>2.14.1</jackson-databind.version>
     </properties>
 
     <dependencies>
@@ -42,9 +42,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${httpclient5.version}</version>
         </dependency>
 
         <dependency>
